# noreng

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
src/: CMakeLists.txt  bear.cpp  main.cpp
test/: CMakeLists.txt
